不要ファイル除外・必要ファイル厳選コミット（.gitignore修正）

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,13 @@ fixtures/*.txt
 fixtures/*.html
 
 # 機密情報
-config.yaml
 .env
 
 # その他
-*.log 
+*.log .venv/
+__pycache__/
+*.pyc
+.DS_Store
+.env
+notebooklm_history.db
+
